# hedera-realtime-charts

./: .gitignore  COINGECKO_TIER.md  COMPARISON.md  CONTRIBUTING.md  DATA_DISCLAIMER.md  GETTING_STARTED.md  LIBRARY_USAGE.md  LICENSE  PERFORMANCE.md  README.md  benchmark_results.json  config.py  demo_library.py  demo_proof.py  generate_charts.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AccuracyTicker.tsx  AgentVotePanel.tsx  ChartPanel.tsx  ErrorBoundary.tsx  SwarmStatus.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/stores/: chartStore.ts
docs/: ARCHITECTURE.md
examples/: README.md  advanced_charting_example.py  coingecko_tier_example.py  connection_pool_example.py  gpu_acceleration_example.py  serialization_example.py  simple_price_stream.py  use_case_monitoring.py  use_case_research.py
frontend/: app.py
src/: __init__.py  benchmark.py  benchmark_vnx_server.py  binance_websocket.py  coingecko_client.py  connection_pool.py  gpu_acceleration.py  latency_optimization.py  security.py  serialization.py  server.py  socket_optimization.py  technical_indicators.py  top_cryptos.py  vnx_chart_server.py
tests/: test_vnx_chart_server.py
